Change desc to match fact that macro is in contrib
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/contrib/projects/xwiki-macro-todo@25569 f329d543-caf0-0310-9063-dda96c69346f

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>xwiki-macro-todo</artifactId>
   <packaging>xar</packaging>
-  <name>XWiki Platform - Macro - TODO Macro</name>
+  <name>Contrib - Macro - TODO Macro</name>
   <version>1.0-SNAPSHOT</version>
   <description>Macro for in page todos</description>
   <build>
